# tap-stripe

./: .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml  tap-stripe.sh
.github/workflows/: ci-build.yml  ci.yml  test.yml
.secrets/: config.sample.json
tap_stripe/: streams.py  tap.py
tap_stripe/schemas/: balance-transactions.schema.json  charges.schema.json  checkout-sessions.schema.json  coupons.schema.json  customers.schema.json  discounts.schema.json  disputes.schema.json  invoices.schema.json  payouts.schema.json  promotion-codes.schema.json  refunds.schema.json  subscription-schedules.schema.json  subscriptions.schema.json
tap_stripe/schemas/shared/: coupon.schema.json  discount.schema.json  plan.schema.json  plans.schema.json
tap_stripe/tests/: __init__.py  test_core.py  test_schemas.py
