[tool.poetry]
name = "tap-stripe"
version = "0.1.1"
description = "`tap-stripe` is Singer tap for Stripe, built with the Singer SDK."
authors = ["Prratek Ramchandani"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.6.2,<3.10"
singer-sdk = "^0.3.12"
stripe = "^2.56.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = {version = "^20.8b1", allow-prereleases = true}
pre-commit = "^2.12.1"
isort = "^5.8.0"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = "tap_stripe"

[build-system]
# Uncomment the pinned version in favor of the git URL once
# https://github.com/python-poetry/poetry-core/pull/257 is merged
# and a new poetry-core 1.0.x is released
# requires = ["poetry-core>=1.0.0"]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-stripe = 'tap_stripe.tap:cli'
